# hermesdesk

./: .gitignore  .gitmodules  2026-4-28完成Gateway进展.md  AGENTS.md  CHANGES_2026-04-21.md  CHANGES_2026-04-22.md  CHANGES_2026-04-23.md  CHANGES_2026-04-24-chat-refactor.md  CHANGES_2026-04-24.md  CHANGES_2026-04-25.md  CHANGES_2026-04-26.md  CHANGES_2026-04-27.md  CHANGES_2026-04-28.md  DECISIONS.md  LICENSE  README.md  SOUL.md  SYNC_UPSTREAM.md  UI_suggestion_4_25.md  kabuqina_ux_suggestions.md
docs/: README.md  ROADMAP.md  agent-screenshot-design.md  architecture.md  auto-update.md  chat-streaming-plan.md  code-signing.md  create-mutex-architecture.md  depatching-plan.md  document-tools-plan.md  embedded-python-bundled.md  gateway-desk-weixin-strategy.md  gateway-route-c-weixin-validation.md  hermesdesk-capability-matrix.md  hermesdesk_gateway_bug_report.md  onboarding.md  openrouter-to-deepseek-plan.md  qa-checklist.md  safety.md  screenshot-plan.md  skills-design-decision.md  skills-l2-frontend.md  skills-security.md  test-plan.md  (+5 more)
tauri/: Cargo.toml  Ctemp_hermes_out.txt  syscheck.txt  tauri.conf.json
tauri/capabilities/: default.json
tauri/icons/: README.md  icon.icns
tauri/src/: bridge.rs  capture.rs  companion.rs  cron.rs  desktop_organizer.rs  dingtalk_env.rs  edge_browser.rs  email_env.rs  email_oauth.rs  feishu_env.rs  feishu_qr.rs  gateway_env_patch.rs  gateway_supervisor.rs  lib.rs  main.rs  pairing.rs  paths.rs  proxy.rs  python_supervisor.rs  qq_env.rs  qqbot_qr.rs  secrets.rs  telegram_env.rs  tray.rs  validation.rs  wecom_env.rs  weixin_qr.rs
(+162 files in other folders)
