[package]
name = "hermesdesk"
version = "0.1.0"
edition = "2021"
description = "HermesDesk — friendly Windows AI assistant powered by Hermes Agent"
license = "MIT"
publish = false
rust-version = "1.80"

[lib]
name = "hermesdesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hermesdesk"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
keyring             = { version = "3", features = ["windows-native"] }  # Windows Credential Manager via DPAPI
tauri-plugin-os    = "2"
tauri-plugin-fs    = "2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
anyhow      = "1"
thiserror   = "2"
log         = "0.4"
env_logger  = "0.11"
once_cell   = "1"
rand        = "0.8"
sha2        = "0.10"
hex         = "0.4"
hyper       = { version = "1", features = ["server", "http1"] }
hyper-util  = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
bytes       = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto       = true
codegen-units = 1
panic     = "abort"
strip     = true
